--- a/src/app/pages/weapon-select-page/weapon-select-page.scss
+++ b/src/app/pages/weapon-select-page/weapon-select-page.scss
@@ -3,7 +3,7 @@
 
 .content-container {
   display: grid;
-  grid-template-columns: minmax(400px, 33vw) minmax(550px, 67vw);
+  grid-template-columns: minmax(400px, 33vw) minmax(350px, 67vw);
   grid-template-rows: 1fr;
   row-gap: 1rem;
   height: 100%;
